--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "jsdom": "^26.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vitest": "^3.1.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
@@ -34,6 +34,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.2",
+    "vitest": "^3.1.2"
   }
 }
