--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
     "@testing-library/jest-dom": "^6.6.3",
+    "axios": "^1.8.4",
     "jsdom": "^26.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
