--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Node modules and build folders
+node_modules/
+dist/
+dist-ssr/
 *.local
 
+# Environment files
+/Backend/config/.env
+
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
