--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/jest-dom": "^6.6.3",
     "axios": "^1.8.4",
     "jsdom": "^26.1.0",
