--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "axios": "^1.9.0",
     "jsdom": "^26.1.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0"
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.22.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.0.4",
