--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@mui/material": "^7.1.1",
     "@mui/system": "^7.1.0",
     "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.50.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
